--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0",
+    "material-ui": "^0.15.0",
+    "meteor-node-stubs": "^0.2.3",
     "react": "^15.0.2",
+    "react-addons-pure-render-mixin": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
